# LlamaCppAndroidTest

./: build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/me/ag2s/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/me/ag2s/app/: ChatMainScreen.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/me/ag2s/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/me/ag2s/app/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: .gitignore  build.gradle
llama/src/androidTest/java/me/ag2s/llama/: ExampleInstrumentedTest.kt
llama/src/main/cpp/: CMakeLists.txt  LLamaAndroid.cpp  fatch.bat  include.7z
llama/src/main/cpp/include/: readme.md
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt  Message.kt
llama/src/test/java/me/ag2s/llama/: ExampleUnitTest.kt
